<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Splash_background"
    tools:context=".SplashScreenActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        >


        <ImageView
            android:id="@+id/instaLogo"
            android:layout_width="200dp"
            android:layout_height="200dp"

            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@color/Splash_background"
            android:backgroundTint="@color/Splash_background"


            android:contentDescription="@string/instagram_logo"
            android:scaleType="fitXY"
            android:src="@drawable/instalogo"

            />

        <TextView
            android:id="@+id/from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignTop="@id/metalogo"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:text="@string/from"
            android:textAlignment="center"
            android:textColor="@color/textColorAlpha" />

        <ImageView
            android:id="@+id/metalogo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"

            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/meta"

            android:src="@drawable/meta_instagram" />


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>